--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -303,7 +303,7 @@
 <div class="content" role="main">
 
 <!-- code below -->
-
+<app-game></app-game>
 
 
   <svg id="clouds" alt="Gray Clouds Background" xmlns="http://www.w3.org/2000/svg" width="2611.084" height="485.677" viewBox="0 0 2611.084 485.677">
