--- a/src/app/modules/game/components/game/game.component.html
+++ b/src/app/modules/game/components/game/game.component.html
@@ -24,5 +24,18 @@
       <div class="grid-cell"></div>
       <div class="grid-cell"></div>
     </div>
+
+    <div class="items">
+      <div class="item" *ngFor="let item of items" [ngStyle]="getStyles(item)">
+        <div class="item-title">{{item.value}}</div>
+      </div>
+      <div class="item" [ngStyle]="{top:'120px', left: '10px', 'background-color': 'blue'}">
+        <div class="item-title">4</div>
+      </div>
+      <div class="item" [ngStyle]="{top:'10px', left: '120px', 'background-color': 'navy'}">
+        <div class="item-title">8</div>
+      </div>
+    </div>
+
   </div>
 </div>
