--- a/src/app/modules/game/components/game/game.component.html
+++ b/src/app/modules/game/components/game/game.component.html
@@ -30,6 +30,8 @@
         <div class="item-title">{{item.value}}</div>
       </div>
     </div>
-
+    <div *ngIf="gameService.theEnd" class="overlay">
+      <div class="overlay-text">The end</div>
+    </div>
   </div>
 </div>
